--- a/index.html
+++ b/index.html
@@ -1079,26 +1079,27 @@ class="logo">
 
         <div class="site-description">
             <h2>What are Unblocked Games?</h2>
-            <p>Unblocked Games are the online browser-based games that are not blocked on restricted networks, such as schools, offices, or public Wi-Fi, where gaming sites are often blocked.
-They run directly in your web browser, usually using HTML5 technology, so you don’t need to download or install anything. Because they’re hosted on open, secure servers, unblocked games can bypass filters that normally prevent access to entertainment or gaming sites.
+            <p>Unblocked games are online games that can be played freely without restrictions even on networks where gaming sites are usually blocked, such as schools, colleges, or offices. These games are often hosted on trusted platforms like Github.io, allowing players to access them directly through a browser without needing downloads or VPNs. The main goal of unblocked games is simple: to let you enjoy fun, quick entertainment anywhere, anytime. Whether you’re taking a short break from studying or relaxing after work, unblocked games offer a safe and enjoyable escape that’s always just one click away.
 </p>
-            <p>At OnlySZgames, we specialize in providing a safe, high-speed library of games that are not blocked and work perfectly on Chromebooks, PCs, and mobile devices.</p>
-      <h2>Why Choose Only Sz Games for Unblocked Games?</h2>
-            <p>When it comes to unblocked gaming, Only Sz Games stands out as your most trusted and reliable destination. We don’t just host games, we deliver smooth, safe, and nonstop fun anywhere, anytime.</p>
-            <h3>1. 100% Unblocked — Play Anywhere</h3>
-            <p>Whether you’re at school, work, or on public Wi-Fi, Only Sz Games gives you instant access to 100+ games that work without VPNs or proxies.  
-No limits, no waiting — just click and play.</p>
+            <p>At faf games, we specialize in providing a safe, high-speed library of games that are not blocked and work perfectly on Chromebooks, PCs, and mobile devices.</p>
+      <h2>Why Choose FAF Games for Unblocked Games?</h2>
+            <p>At FAF Games, we bring you the best collection of unblocked games that work smoothly on any device whether you’re at school, work, or home. Our platform is built for gamers who want fast, safe, and distraction-free fun. We regularly update our library with trending titles, from action-packed shooters to relaxing arcade games. With FAF Games, you don’t need downloads, VPNs, or complicated setups just click and play instantly. Choose FAF Games and experience gaming freedom without limits!</p>
+            <h3>1. 100% Unblocked Play Anywhere</h3>
+            <p>Whether you’re at school, work, or on public Wi-Fi, FAF Games gives you instant access to 100+ games that work without VPNs or proxies. No limits, no waiting just click and play.
+</p>
             <h3>2. Lightning-Fast HTML5 Performance </h3>
-            <p>Every game on our platform runs on HTML5 technology, ensuring faster load times, seamless gameplay, and perfect compatibility across Chromebooks, PCs, and mobile browsers.</p>
+            <p>Every game on our platform runs on HTML5 technology, ensuring faster load times, seamless gameplay, and perfect compatibility across Chromebooks, PCs, and mobile browsers.
+</p>
        <h3>3. Safe & Secure Gaming  </h3>
-            <p>We take your safety seriously. All titles are carefully tested for malware-free, pop-up-free gameplay. Our clean interface means zero distractions, just pure gaming fun.</p>
+            <p>We take your safety seriously. All titles are carefully tested for malware-free, pop-up-free gameplay. Our clean interface means zero distractions, just pure gaming fun.
+</p>
         <h3>4. Play on Any Device</h3>
-            <p>From desktops to tablets to smartphones, Only Sz Games adapts to your screen automatically. Play your favorite action, puzzle, racing, or .io titles anywhere, any time.</p>
+            <p>From desktops to tablets to smartphones, FAF Games adapts to your screen automatically. Play your favorite action, puzzle, racing, or .io titles anywhere, anytime.
+</p>
+
      <h2>Free Github.io Games for School and Work</h2>
-        <p>If school or work filters block your favorite gaming sites, don’t worry, Only Sz Games has you covered.
-We offer a big collection of free unblocked GitHub.io games that work anywhere.
-Whether you’re in class, on a break at work, or just want to relax, you can play right away, no downloads or sign-ups needed.</p>
-<p>Our site features HTML5 and classic Flash games, plus multiplayer options that let you connect and play with people from all over the world in seconds.</p>
+        <p>Looking for free games that work at school or the office? You’re in the right place! FAF Games features the best Github.io unblocked games that you can play directly in your browser no VPNs, no downloads, and no logins required.</p>
+<p>These Github.io games are hosted on trusted platforms, making them accessible even on restricted networks. Whether it’s a short break between classes or a few minutes of relaxation during work, our collection of free unblocked Github.io games helps you unwind, refresh, and recharge without breaking any rules.</p>
    <h2>Top 5 Unblocked Games at Only Sz Games</h2>     
         <h3>1. 1v1.lol </h3>
         <p><a href = "https://onlyszgames.github.io/1v1-lol/" style="color: #FF6E01; font-weight: bold; text-decoration: none;">1v1.lol unblocked</a> is a fast-paced shooter and building game where quick thinking wins. Battle other players online and show your skills in this Fortnite-style arena.</p>
