--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Github.io Games | Play Unblocked Games For Free</title>
-    <meta name="description" content="Only Sz Games is your premium portal for top unblocked games. Instantly play favorites like Shell Shockers, Minecraft Classic, and Slope online. Free browser gaming for everyone.">
-    <meta name="keywords" content="Only Sz Games, unblocked games, free online games, browser games, play unblocked, 1v1.lol, slope, minecraft classic, shell shockers, games at school">
+    <meta name="description" content="FAF Games is your premium portal for top unblocked games. Instantly play favorites like Shell Shockers, Minecraft Classic, and Slope online. Free browser gaming for everyone.">
+    <meta name="keywords" content="FAF Games, unblocked games, free online games, browser games, play unblocked, 1v1.lol, slope, minecraft classic, shell shockers, games at school">
     <link rel="canonical" href="https://onlyszgames.github.io/" />
     <meta name="robots" content="index, follow">
     <meta name="author" content="Only Sz Games">
@@ -1102,15 +1102,15 @@ class="logo">
 <p>These Github.io games are hosted on trusted platforms, making them accessible even on restricted networks. Whether it’s a short break between classes or a few minutes of relaxation during work, our collection of free unblocked Github.io games helps you unwind, refresh, and recharge without breaking any rules.</p>
    <h2>Top 5 Unblocked Games at Only Sz Games</h2>     
         <h3>1. 1v1.lol </h3>
-        <p><a href = "https://onlyszgames.github.io/1v1-lol/" style="color: #FF6E01; font-weight: bold; text-decoration: none;">1v1.lol unblocked</a> is a fast-paced shooter and building game where quick thinking wins. Battle other players online and show your skills in this Fortnite-style arena.</p>
+        <p><a href = "https://onlyszgames.github.io/1v1-lol/" style="color: #FF6E01; font-weight: bold; text-decoration: none;">1v1.lol unblocked</a> If you love building and battling, 1v1.lol is a must-try. It’s an online shooter game inspired by Fortnite mechanics build ramps, outsmart your opponents, and be the last one standing. The game’s fast-paced action and smooth controls make it perfect for quick gaming sessions at school or work.</p>
         <h3>2. Slope </h3>
-        <p>In <a href="https://onlyszgames.github.io/slope/" style="color: #FF6E01; font-weight: bold; text-decoration: none;">slope unblocked game</a> test your reflexes in this endless rolling ball challenge. Dodge obstacles, keep your balance, and race for the highest score.</p>
+        <p>In <a href="https://onlyszgames.github.io/slope/" style="color: #FF6E01; font-weight: bold; text-decoration: none;">slope unblocked game</a> Test your reflexes in Slope, the iconic endless-running 3D game. Guide a rolling ball down a neon slope, dodging obstacles and sharp turns as speed increases. It’s simple yet incredibly addictive one wrong move and you start over. Perfect for players who love a challenge!</p>
         <h3>3. Tunnel Rush</h3>
-        <p><a href="https://onlyszgames.github.io/tunnel-rush/" style="color: #FF6E01; font-weight: bold; text-decoration: none;">Tunnel Rush unblocked</a> is a fast-paced 3D running game where you dodge obstacles at high speed through colorful tunnels. Test your reflexes and focus as the game gets faster with every second!</p>
+        <p><a href="https://onlyszgames.github.io/tunnel-rush/" style="color: #FF6E01; font-weight: bold; text-decoration: none;">Tunnel Rush unblocked</a> Experience pure adrenaline with Tunnel Rush. This high-speed racing game takes you through a colorful, twisting tunnel filled with obstacles. Stay focused, dodge everything, and try to reach the highest score possible. Its bright visuals and fast gameplay make it one of the best unblocked arcade games out there.</p>
         <h3>4. Flappy Bird</h3>
-        <p><a href="https://onlyszgames.github.io/flappy-bird/"  style="color: #FF6E01; font-weight: bold; text-decoration: none;">Flappy Bird</a> is an addictive tap-and-fly game where you guide a tiny bird through a series of green pipes. It’s simple to play but super challenging — one wrong tap, and it’s game over!</p>
+        <p><a href="https://onlyszgames.github.io/flappy-bird/"  style="color: #FF6E01; font-weight: bold; text-decoration: none;">Flappy Bird</a> A true classic! Flappy Bird may look easy, but it’s one of the most frustratingly fun games ever created. Tap to keep your bird in the air and avoid the pipes. Compete with friends for the best score and see how long you can last in this timeless unblocked favorite.</p>
         <h3>5. Retro Bowl</h3>
-            <p>Be the coach of your dream football team in this <a href="https://onlyszgames.github.io/retro-bowl/" style="color: #FF6E01; font-weight: bold; text-decoration: none;">retro-style sports classic</a>. Simple to play, hard to put down.</p>
+            <p>Be the coach of your dream football team in this <a href="https://onlyszgames.github.io/retro-bowl/" style="color: #FF6E01; font-weight: bold; text-decoration: none;">retro-style sports classic</a>. Love football? Retro Bowl brings back classic 8-bit charm with modern gameplay. Manage your own team, plan strategies, and play matches in a nostalgic football world. It’s simple, fun, and one of the most popular sports unblocked games online.</p>
         </div>
 
     </div>
@@ -1119,8 +1119,8 @@ class="logo">
         <div class="container">
             <div class="footer-content">
                 <div class="footer-section">
-                    <h3>Only Sz Games</h3>
-             <p>Looking for your favorite unblocked games? Play them all right here, completely unblocked, even at school or work. Just click and play instantly, no downloads required.</p>
+                    <h3>FAF Games</h3>
+             <p>Looking for the best unblocked games? At FAF Games, you can play all your favorites instantly no downloads, no limits, and no restrictions, even at school or work.</p>
                     <div class="social-icons">
                         <a href="#"><i class="fab fa-facebook-f"></i></a>
                         <a href="#"><i class="fab fa-twitter"></i></a>
