--- a/index.html
+++ b/index.html
@@ -1100,7 +1100,7 @@ class="logo">
      <h2>Free Github.io Games for School and Work</h2>
         <p>Looking for free games that work at school or the office? You’re in the right place! FAF Games features the best Github.io unblocked games that you can play directly in your browser no VPNs, no downloads, and no logins required.</p>
 <p>These Github.io games are hosted on trusted platforms, making them accessible even on restricted networks. Whether it’s a short break between classes or a few minutes of relaxation during work, our collection of free unblocked Github.io games helps you unwind, refresh, and recharge without breaking any rules.</p>
-   <h2>Top 5 Unblocked Games at Only Sz Games</h2>     
+   <h2>Top 5 Unblocked Games at FAF Games</h2>     
         <h3>1. 1v1.lol </h3>
         <p><a href = "https://onlyszgames.github.io/1v1-lol/" style="color: #FF6E01; font-weight: bold; text-decoration: none;">1v1.lol unblocked</a> If you love building and battling, 1v1.lol is a must-try. It’s an online shooter game inspired by Fortnite mechanics build ramps, outsmart your opponents, and be the last one standing. The game’s fast-paced action and smooth controls make it perfect for quick gaming sessions at school or work.</p>
         <h3>2. Slope </h3>
