--- a/index.html
+++ b/index.html
@@ -19,20 +19,20 @@
     <meta name="keywords" content="FAF Games, unblocked games, free online games, browser games, play unblocked, 1v1.lol, slope, minecraft classic, shell shockers, games at school">
     <link rel="canonical" href="https://onlyszgames.github.io/" />
     <meta name="robots" content="index, follow">
-    <meta name="author" content="Only Sz Games">
-    <meta property="og:title" content="Only Sz Games | Play Unblocked Games For Free" />
-    <meta property="og:description" content="Only Sz Games is your premium portal for top unblocked games. Instantly play favorites like Shell Shockers, Minecraft Classic, and Slope online. Free browser gaming for everyone." />
+    <meta name="author" content="FAF Games">
+    <meta property="og:title" content="FAF Games | Play Unblocked Games For Free" />
+    <meta property="og:description" content="FAF Games is your premium portal for top unblocked games. Instantly play favorites like Shell Shockers, Minecraft Classic, and Slope online. Free browser gaming for everyone." />
     <meta property="og:url" content="https://onlyszgames.github.io/" />
     <meta property="og:image" content="https://onlyszgames.github.io/img/og-image.png" />
 <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="Only Sz Games" />
+    <meta property="og:site_name" content="FAF Games" />
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@SZGames">
-    <meta name="twitter:title" content="Only Sz Games //» Your Ultimate Hub For Unblocked Games">
-    <meta name="twitter:description" content="Only Sz Games is your premium portal for top unblocked games. Instantly play favorites like Shell Shockers, Minecraft Classic, and Slope online. Free browser gaming for everyone.">
+    <meta name="twitter:title" content="FAF Games //» Your Ultimate Hub For Unblocked Games">
+    <meta name="twitter:description" content="FAF Games is your premium portal for top unblocked games. Instantly play favorites like Shell Shockers, Minecraft Classic, and Slope online. Free browser gaming for everyone.">
     <meta name="twitter:image" content="https://onlyszgames.github.io/img/twitter-image.png">
     <link rel="icon" type="image/png" href="favicon.png">
-    <script type="application/ld+json">{"@context":"https://schema.org","@type":"WebSite","url":"https://onlyszgames.github.io","name":"Only Sz Games","potentialAction":{"@type":"SearchAction","target":"https://onlyszgames.github.io/search?q={search_term_string}","query-input":"required name=search_term_string"}}</script>
+    <script type="application/ld+json">{"@context":"https://schema.org","@type":"WebSite","url":"https://onlyszgames.github.io","name":"FAF Games","potentialAction":{"@type":"SearchAction","target":"https://onlyszgames.github.io/search?q={search_term_string}","query-input":"required name=search_term_string"}}</script>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Open+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <meta name="google-site-verification" content="aLyN5ErmZSlelTUd3NtEixDnSIPJ1szqJHl5eG7VKKI" />
@@ -219,7 +219,7 @@ justify-content: center;}
         <div class="container header-content">
             <a href="/"
 class="logo">
-               Only Sz Games
+               FAF GAMES
             </a>
             <nav class="main-nav">
                 <button class="nav-toggle" id="navToggle" aria-label="Toggle navigation">
@@ -317,7 +317,7 @@ class="logo">
   text-shadow: 0 0 6px rgba(0, 255, 255, 0.3);
 }
 
-/* Make highlighted part (Only Sz Games) crisp and glowing */
+/* Make highlighted part (FAF Games) crisp and glowing */
 .hero-header h1 span {
   -webkit-text-fill-color: #00f5ff;
   -webkit-background-clip: unset;
@@ -365,7 +365,7 @@ class="logo">
 </style>
 
 <!-- ✅ Page Title (for browser tab) -->
-<title>Only Sz Games — Play Unblocked Games Anywhere</title>
+<title>FAF Games — Play Unblocked Games Anywhere</title>
 
 
 <div class="games-section">
@@ -1132,7 +1132,7 @@ class="logo">
 
             <div class="footer-bottom">
                 <p>&copy;
-<span id="currentYear"></span> Only Sz Games. All rights reserved.</p>
+<span id="currentYear"></span> FAF Games. All rights reserved.</p>
                 <div class="footer-links">
                     <a href="/privacy-policy">Privacy Policy</a>
                     <a href="/contact">Contact Us</a>
