--- a/contact/index.html
+++ b/contact/index.html
@@ -4,21 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us</title>
-    <meta name="description" content="Need to contact Only Sz Games? Use our official contact page for any questions, feedback, or inquiries about our unblocked games. We are here to help.">
-    <meta name="keywords" content="contact us, contact Only Sz Games, support, feedback, game inquiries">
+    <meta name="description" content="Need to contact FAF GAMES? Use our official contact page for any questions, feedback, or inquiries about our unblocked games. We are here to help.">
+    <meta name="keywords" content="contact us, contact FAF GAMES, support, feedback, game inquiries">
     <link rel="canonical" href="https://onlyszgames.github.io/contact" />
     <meta name="robots" content="index, follow">
-    <meta name="author" content="Only Sz Games">
+    <meta name="author" content="FAF GAMES">
     <meta property="og:title" content="Contact Us" />
-    <meta property="og:description" content="Need to contact Only Sz Games? Use our official contact page for any questions, feedback, or inquiries about our unblocked games. We are here to help." />
+    <meta property="og:description" content="Need to contact FAF GAMES? Use our official contact page for any questions, feedback, or inquiries about our unblocked games. We are here to help." />
     <meta property="og:url" content="https://onlyszgames.github.io/contact" />
     <meta property="og:image" content="https://onlyszgames.github.io/img/og-image.png" />
     <meta property="og:type" content="article" />
-    <meta property="og:site_name" content="Only Sz Games" />
+    <meta property="og:site_name" content="FAF GAMES" />
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@SZGames">
     <meta name="twitter:title" content="Contact Us">
-    <meta name="twitter:description" content="Need to contact Only Sz Games? Use our official contact page for any questions, feedback, or inquiries about our unblocked games. We are here to help.">
+    <meta name="twitter:description" content="Need to contact FAF GAMES? Use our official contact page for any questions, feedback, or inquiries about our unblocked games. We are here to help.">
     <meta name="twitter:image" content="https://onlyszgames.github.io/img/twitter-image.png">
     <link rel="icon" type="image/png" href="favicon.png">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Open+Sans&display=swap" rel="stylesheet">
@@ -153,7 +153,7 @@ justify-content: center;}
     <header>
         <div class="container header-content">
             <a href="/" class="logo">
-                Only Sz Games
+                FAF GAMES
             </a>
             <nav class="main-nav">
                <button class="nav-toggle" id="navToggle" aria-label="Toggle navigation">
@@ -194,7 +194,7 @@ justify-content: center;}
     <div class="container">
         <div class="page-content">
             <h1>Contact Us</h1>
-            <h2>Get in Touch with Only Sz Games</h2><p>We value your feedback and are here to assist you. Whether you have a question about our unblocked games, a suggestion for the website, or need support, we want to hear from you. Your input helps us make Only Sz Games better for everyone.</p><h3>How to Reach Us</h3><p>Please use the official contact form available on this page for all inquiries. This is the fastest way to get a response from our team. We kindly ask you to provide as much detail as possible so we can assist you effectively.</p><h3>Our Response Time</h3><p>We strive to respond to all messages within 48 business hours. Please be patient as we review your request. We appreciate you taking the time to connect with us.</p>
+            <h2>Get in Touch with FAF GAMES</h2><p>We value your feedback and are here to assist you. Whether you have a question about our unblocked games, a suggestion for the website, or need support, we want to hear from you. Your input helps us make FAF GAMES better for everyone.</p><h3>How to Reach Us</h3><p>Please use the official contact form available on this page for all inquiries. This is the fastest way to get a response from our team. We kindly ask you to provide as much detail as possible so we can assist you effectively.</p><h3>Our Response Time</h3><p>We strive to respond to all messages within 48 business hours. Please be patient as we review your request. We appreciate you taking the time to connect with us.</p>
         </div>
     </div>
 
@@ -202,8 +202,8 @@ justify-content: center;}
         <div class="container">
             <div class="footer-content">
     <div class="footer-section">
-                    <h3>Only Sz Games</h3>
-                    <p>Looking for your favorite Only Sz Games? Play them all right here, completely unblocked, even at school or work. Just click and play instantly—no downloads required.</p>
+                    <h3>FAF GAMES</h3>
+                    <p>Looking for your favorite FAF GAMES? Play them all right here, completely unblocked, even at school or work. Just click and play instantly—no downloads required.</p>
                     <div class="social-icons">
                         <a href="#"><i class="fab fa-facebook-f"></i></a>
                      <a href="#"><i class="fab fa-twitter"></i></a>
@@ -215,7 +215,7 @@ justify-content: center;}
 
             <div class="footer-bottom">
                 <p>&copy;
-<span id="currentYear"></span> Only Sz Games. All rights reserved.</p>
+<span id="currentYear"></span> FAF GAMES. All rights reserved.</p>
                 <div class="footer-links">
                     <a href="/privacy-policy">Privacy Policy</a>
                     <a href="/contact">Contact Us</a>
