--- a/faq/index.html
+++ b/faq/index.html
@@ -3,22 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FAQ - Only Sz Games</title>
-    <meta name="description" content="Have questions about Only Sz Games? Find answers in our FAQ. Learn about our unblocked games, how to play, and browser compatibility.">
-    <meta name="keywords" content="faq, frequently asked questions, Only Sz Games faq, game help, unblocked games help">
+    <title>FAQ - FAF Games</title>
+    <meta name="description" content="Have questions about FAF Games? Find answers in our FAQ. Learn about our unblocked games, how to play, and browser compatibility.">
+    <meta name="keywords" content="faq, frequently asked questions, FAF Games faq, game help, unblocked games help">
     <link rel="canonical" href="https://onlyszgames.github.io/faq" />
     <meta name="robots" content="index, follow">
-    <meta name="author" content="Only Sz Games">
-    <meta property="og:title" content="FAQ - Only Sz Games" />
-    <meta property="og:description" content="Have questions about Only Sz Games? Find answers in our FAQ. Learn about our unblocked games, how to play, and browser compatibility." />
+    <meta name="author" content="FAF Games">
+    <meta property="og:title" content="FAQ - FAF Games" />
+    <meta property="og:description" content="Have questions about FAF Games? Find answers in our FAQ. Learn about our unblocked games, how to play, and browser compatibility." />
     <meta property="og:url" content="https://onlyszgames.github.io/faq" />
     <meta property="og:image" content="https://onlyszgames.github.io/img/og-image.png" />
     <meta property="og:type" content="article" />
-    <meta property="og:site_name" content="Only Sz Games" />
+    <meta property="og:site_name" content="FAF Games" />
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@SZGames">
-    <meta name="twitter:title" content="FAQ - Only Sz Games">
-    <meta name="twitter:description" content="Have questions about Only Sz Games? Find answers in our FAQ. Learn about our unblocked games, how to play, and browser compatibility.">
+    <meta name="twitter:title" content="FAQ - FAF Games">
+    <meta name="twitter:description" content="Have questions about FAF Games? Find answers in our FAQ. Learn about our unblocked games, how to play, and browser compatibility.">
     <meta name="twitter:image" content="https://onlyszgames.github.io/img/twitter-image.png">
     <link rel="icon" type="image/png" href="favicon.png">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Open+Sans&display=swap" rel="stylesheet">
@@ -153,7 +153,7 @@ justify-content: center;}
     <header>
         <div class="container header-content">
             <a href="/" class="logo">
-                Only Sz Games
+                FAF Games
             </a>
             <nav class="main-nav">
                <button class="nav-toggle" id="navToggle" aria-label="Toggle navigation">
@@ -194,7 +194,7 @@ justify-content: center;}
     <div class="container">
         <div class="page-content">
             <h1>FAQ</h1>
-            <h2>Frequently Asked Questions</h2><p>Welcome to the Only Sz Games FAQ page. We have compiled answers to the most common questions about our unblocked games portal. We hope this section helps you find the information you need quickly.</p><h3>Are all the games really free?</h3><p>Yes. Every game on Only Sz Games is completely free to play. We do not have any hidden fees or subscriptions. You can enjoy our entire library without cost.</p><h3>Why are these games called unblocked?</h3><p>Our games are designed to be accessible from networks that often restrict gaming websites, such as schools or workplaces. They run directly in your browser without requiring special permissions or downloads.</p><h3>Does your site work on all browsers?</h3><p>We optimize our website for modern browsers like Chrome, Firefox, and Safari. For the best experience, we recommend using the latest version of your preferred browser.</p>
+            <h2>Frequently Asked Questions</h2><p>Welcome to the FAF Games FAQ page. We have compiled answers to the most common questions about our unblocked games portal. We hope this section helps you find the information you need quickly.</p><h3>Are all the games really free?</h3><p>Yes. Every game on FAF Games is completely free to play. We do not have any hidden fees or subscriptions. You can enjoy our entire library without cost.</p><h3>Why are these games called unblocked?</h3><p>Our games are designed to be accessible from networks that often restrict gaming websites, such as schools or workplaces. They run directly in your browser without requiring special permissions or downloads.</p><h3>Does your site work on all browsers?</h3><p>We optimize our website for modern browsers like Chrome, Firefox, and Safari. For the best experience, we recommend using the latest version of your preferred browser.</p>
         </div>
     </div>
 
@@ -202,8 +202,8 @@ justify-content: center;}
         <div class="container">
             <div class="footer-content">
     <div class="footer-section">
-                    <h3>Only Sz Games</h3>
-                    <p>Looking for your favorite Only Sz Games? Play them all right here, completely unblocked, even at school or work. Just click and play instantly—no downloads required.</p>
+                    <h3>FAF Games</h3>
+                    <p>Looking for your favorite FAF Games? Play them all right here, completely unblocked, even at school or work. Just click and play instantly—no downloads required.</p>
                     <div class="social-icons">
                         <a href="#"><i class="fab fa-facebook-f"></i></a>
                      <a href="#"><i class="fab fa-twitter"></i></a>
@@ -215,7 +215,7 @@ justify-content: center;}
 
             <div class="footer-bottom">
                 <p>&copy;
-<span id="currentYear"></span> Only Sz Games. All rights reserved.</p>
+<span id="currentYear"></span> FAF Games. All rights reserved.</p>
                 <div class="footer-links">
                     <a href="/privacy-policy">Privacy Policy</a>
                     <a href="/contact">Contact Us</a>
