--- a/super-mario-bros/index.html
+++ b/super-mario-bros/index.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Super Mario Bros Unblocked | OnlySzGames</title>
+    <title>Super Mario Bros – Play Unblocked Games Instantly in Your Browser</title>
     <meta name="description" content="Super Mario Bros Unblocked is the original 8-bit NES classic. Play as Mario, run and jump through the Mushroom Kingdom, and save Princess Peach from Bowser.">
     <meta name="keywords" content="super mario bros, super mario bros unblocked, mario, nes mario, platformer, classic game, adventure game, kids game">
     <link rel="canonical" href="https://onlyszgames.github.io/super-mario-bros/" />
     <meta name="robots" content="index, follow">
-    <meta name="author" content="Only SZ Games">
+    <meta name="author" content="FAF Games">
     <meta property="og:title" content="Super Mario Bros Unblocked ~» The NES Classic" />
     <meta property="og:description" content="Super Mario Bros Unblocked is the original 8-bit NES classic. Play as Mario, run and jump through the Mushroom Kingdom, and save Princess Peach from Bowser." />
     <meta property="og:url" content="https://onlyszgames.github.io/super-mario-bros/" />
     <meta property="og:image" content="https://szgames.github.io/img/super-mario-bros.png" />
     <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="Only SZ Games" />
+    <meta property="og:site_name" content="FAF Games" />
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@OnlySZGames">
     <meta name="twitter:title" content="Super Mario Bros Unblocked | OnlySzGames">
@@ -705,7 +705,7 @@ class="category-tag-item" style="background-color: #00C853;">
         <div class="container">
    <div class="footer-content">
                 <div class="footer-section">
-                    <h3>Only SZ Games</h3>
+                    <h3>FAF Games</h3>
                     <p>Looking for your favorite Unblocked Games? Play them all right here, completely unblocked, even at school or work. Just click and play instantly—no downloads required.</p>
                     <div class="social-icons">
           <a href="#"><i class="fab fa-facebook-f"></i></a>
