--- a/super-mario-bros/index.html
+++ b/super-mario-bros/index.html
@@ -393,7 +393,7 @@ justify-content: center;}
     <header>
        <div class="container header-content">
             <a href="/" class="logo">
-                SZ Games
+                FAF Games
             </a>
             <nav class="main-nav">
                 <button class="nav-toggle" id="navToggle" aria-label="Toggle navigation">
@@ -718,7 +718,7 @@ class="category-tag-item" style="background-color: #00C853;">
 
             <div class="footer-bottom">
                 <p>&copy;
-<span id="currentYear"></span> SZ Games. All rights reserved.</p>
+<span id="currentYear"></span> FAF Games. All rights reserved.</p>
                 <div class="footer-links">
                     <a href="/privacy-policy">Privacy Policy</a>
                     <a href="/contact">Contact Us</a>
