--- a/super-mario-bros/index.html
+++ b/super-mario-bros/index.html
@@ -706,7 +706,7 @@ class="category-tag-item" style="background-color: #00C853;">
    <div class="footer-content">
                 <div class="footer-section">
                     <h3>FAF Games</h3>
-                    <p>Looking for your favorite Unblocked Games? Play them all right here, completely unblocked, even at school or work. Just click and play instantly—no downloads required.</p>
+                    <p>Looking for your favorite Unblocked Games? Play them all right here, completely unblocked, even at school or work. Just click and play instantly no downloads required.</p>
                     <div class="social-icons">
           <a href="#"><i class="fab fa-facebook-f"></i></a>
                         <a href="#"><i class="fab fa-twitter"></i></a>
