--- a/odd-bot-out/index.html
+++ b/odd-bot-out/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odd Bot Out Unblocked | OnlySzGames</title>
-    <meta name="description" content="Odd Bot Out Unblocked is a charming physics-puzzler. You are a bot who failed a test. Help this 'odd' bot escape the factory by solving 100 unique puzzle rooms.">
-    <meta name="keywords" content="odd bot out, odd bot out unblocked, puzzle game, platformer, physics game, robot game, logic game">
+    <title>Odd Bot Out – Play Unblocked Games Online in Fullscreen Mode</title>
+    <meta name="description" content="Play Odd Bot Out and other unblocked games instantly in fullscreen no downloads, no ads. Help the little robot escape puzzling levels and enjoy a fun, brain-teasing adventure!">
+    <meta name="keywords" content="odd bot out, odd bot out unblocked, unblocked games, play odd bot out online, puzzle unblocked games, robot puzzle game, odd bot out browser game, free unblocked games, logic games online, odd bot out full screen">
     <link rel="canonical" href="https://onlyszgames.github.io/odd-bot-out/" />
     <meta name="robots" content="index, follow">
     <meta name="author" content="Only Sz Games">
@@ -434,7 +434,7 @@ justify-content: center;}
 
         <div class="game-header" style="background-color: #FDD835;">
             <h1>Odd Bot Out</h1>
-            <p>Help a small robot escape the factory in Odd Bot Out Unblocked! After failing a test, your little bot is dumped in the recycling. You must guide it through 100 clever puzzle rooms. Build bridges, use physics, and control other robots to find freedom.</p>
+            <p>Help a small robot escape the factory in Odd Bot Out Unblocked, one of the most creative unblocked games on github.io! After failing a test, your little bot is dumped in the recycling. Guide it through 100 clever puzzle rooms build bridges, use physics, and control other robots to find freedom in this fun browser adventure.</p>
         </div>
 
         <div class="star-rating-container" data-game-id="odd-bot-out">
